@@ -1,3 +1,7 @@
+2007-10-06  Andreas Schwab  <schwab@suse.de>
+
+	* fileio.c (Fwrite_region): Ignore EINVAL error from fsync.
+
 2007-10-04  Juanma Barranquero  <lekktu@gmail.com>
 
 	* image.c (syms_of_image) <image-types>: Fix typo in docstring.
